kubernets/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-service
  labels:
    app: person-service
spec:
  replicas: 4
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
      labels:
        app: person-service
    spec:
      containers:
        - name: person-service
          image: localhost:5001/go-person:1.0
          ports:
            - containerPort: 8000
