kubernets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: person-service-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: person-service
            port:
              number: 8000
